# syringe

./: .editorconfig  .gitignore  LICENSE  README.md  meson.build  meson.options
cross/: aarch64-linux-gnu.ini
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  USAGE.md
include/: arch.h  syringe.h  syringe_hook.h
include/dotnet/: corprof_min.h  dotnet_diagnostic.h
include/hook/: syringe_hook.h  syringe_hook_common.h
include/hook/arch/: syringe_hook_arch.h  syringe_hook_x86_64.h
include/public/: syringe.h
include/public/hook/: syringe_hook.h  syringe_hook_common.h  syringe_hook_dotnet.h  syringe_hook_types.h
include/public/hook/arch/: syringe_hook_aarch64.h  syringe_hook_arch.h  syringe_hook_x86_64.h
scripts/: setcap_ptrace.sh
src/: syringe-cli.c  syringe.c
src/arch/: arch_aarch64.c  arch_arm.c  arch_riscv64.c  arch_x86_64.c  gen_shellcode.sh  shellcode_x86_64.S
src/dotnet/: dotnet_diagnostic.c  syringe_dotnet.c  syringe_profiler.cpp
tests/lib/: libgleshook.c  libtest.c
tests/src/: test_hook.c  test_inline.c  test_syringe.c
